Update AiService.java